New framework: test, run and profiling
The parse method takes a String, so split out a new string utils
class (SUtil) from the original FUtil